log
Thu 28 Mar 2024 06:49:27 PM UTC: 
 list.c | 48 ++++++++++++++++++++----------------------------
 1 file changed, 20 insertions(+), 28 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘lista’ undeclared (first use in this function); did you mean ‘ista’?
   33 |   lista->head = NULL;
      |   ^~~~~
      |   ista
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:9: error: unused variable ‘ista’ [-Werror=unused-variable]
   32 |   List *ista = (List *)malloc(sizeof(List));
      |         ^~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5b4d98f
Thu 28 Mar 2024 06:49:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0e9e8b4
Thu 28 Mar 2024 06:51:17 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:40:1: error: expected identifier or ‘(’ before ‘{’ token
   40 | {
      | ^
Compilation failed
e3a63bd
Thu 28 Mar 2024 06:51:37 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
cbd7971
Thu 28 Mar 2024 06:55:35 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:9: error: unused variable ‘first’ [-Werror=unused-variable]
   40 |   void *first = list->head->data;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
872e308
Thu 28 Mar 2024 06:55:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51f8cb9
Thu 28 Mar 2024 06:56:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:27: error: array subscript is not an integer
   40 |   void *first = list->head[list->current];
      |                           ^
Compilation failed
2f87088
Thu 28 Mar 2024 06:59:04 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:17: error: ‘L’ undeclared (first use in this function)
   42 |   void *first = L->head->data;
      |                 ^
list.c:42:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f972062
Thu 28 Mar 2024 06:59:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b48376
Thu 28 Mar 2024 07:00:58 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
e3ee796
Thu 28 Mar 2024 07:01:27 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
a5c2e8f
Thu 28 Mar 2024 07:01:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f9ccaef
